--- a/index.html
+++ b/index.html
@@ -45,23 +45,23 @@
 
                         <!--Store head-->
                         <div class="find-block">
-                              <div class="heading">Our Salons</div>
+                              <div class="heading">Our Stores</div>
                         </div>
                         <!--location tab-->
                         <div class="Locatin-tab">
                               <div class="tabs">
                                     <div class= "city">
                                           <div class= "col-md-3 col-sm-6  ">
-                                                <h3>Mumbai</h3>
+                                                <h3>USA</h3>
                                           </div>
                                           <div class= "col-md-3 col-sm-6">
-                                                <h3>Pune</h3>
+                                                <h3>Russia</h3>
                                           </div>
                                           <div class= "col-md-3 col-sm-6">
-                                                <h3>Thane</h3>
+                                                <h3>Netherlands</h3>
                                           </div>
                                           <div class= "col-md-3 col-sm-6">
-                                                <h3>Alibaug</h3>
+                                                <h3>France</h3>
                                           </div>
 
                                     
@@ -69,7 +69,6 @@
                         </div>
 
     
-
       <script type="text/javascript" src="mapper.js"></script>
       <!-- Latest compiled and minified JavaScript -->
 <script async defer src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
