--- a/index.html
+++ b/index.html
@@ -65,8 +65,12 @@
                                                 <p><span class="detail">Tel no: </span>022-20128221</p>
                                                 <p><span class="detail">Timing: </span>10:00 am to 9:20pm</p>
                                                 <p><span class="detail">Working Days: </span>All Days</p>
-                                                <h6><a href="#">View on Google Map</a></h6>
-                                                <div class="icons-container"></div>
+                                                <h5><a href="#">View on Google Map</a></h5>
+                                                <div class="icons-container">
+                                                      <a href="#"><span class="fa fa-phone"></span></a>
+                                                      <a href="#"><span class="fa fa-whatsapp"></span></a>
+                                                      <a href="#"><span class="fa fa-envelope"></span></a>  
+                                                </div>
                                                 <button class="btn btn-primary">Read More</button>
                                           </div>
                                     </div>
@@ -85,9 +89,11 @@
                                           <p><span class="detail">Tel no: </span>022-20128221</p>
                                           <p><span class="detail">Timing: </span>10:00 am to 9:20pm</p>
                                           <p><span class="detail">Working Days: </span>All Days</p>
-                                          <h6><a href="#">View on Google Map</a></h6>
+                                          <h5><a href="#">View on Google Map</a></h5>
                                           <div class="icons-container">
-
+                                                <a href="#"><span class="fa fa-phone"></span></a>
+                                                <a href="#"><span class="fa fa-whatsapp"></span></a>
+                                                <a href="#"><span class="fa fa-envelope"></span></a> 
                                           </div>
                                           <button class="btn btn-primary">Read More</button>
                                     </div>
@@ -111,9 +117,11 @@
                                     <p><span class="detail">Tel no: </span>022-20128221</p>
                                     <p><span class="detail">Timing: </span>10:00 am to 9:20pm</p>
                                     <p><span class="detail">Working Days: </span>All Days</p>
-                                    <h6><a href="#">View on Google Map</a></h6>
+                                    <h5><a href="#">View on Google Map</a></h5>
                                     <div class="icons-container">
-
+                                          <a href="#"><span class="fa fa-phone"></span></a>
+                                          <a href="#"><span class="fa fa-whatsapp"></span></a>
+                                          <a href="#"><span class="fa fa-envelope"></span></a>
                                     </div>
                                     <button class="btn btn-primary">Read More</button>
                               </div>
@@ -131,9 +139,11 @@
                                     <p><span class="detail">Tel no: </span>022-20128221</p>
                                     <p><span class="detail">Timing: </span>10:00 am to 9:20pm</p>
                                     <p><span class="detail">Working Days: </span>All Days</p>
-                                    <h6><a href="#">View on Google Map</a></h6>
+                                    <h5><a href="#">View on Google Map</a></h5>
                                     <div class="icons-container">
-
+                                          <a href="#"><span class="fa fa-phone"></span></a>
+                                          <a href="#"><span class="fa fa-whatsapp"></span></a>
+                                          <a href="#"><span class="fa fa-envelope"></span></a> 
                                     </div>
                                     <button class="btn btn-primary">Read More</button>
                               </div>
@@ -156,9 +166,11 @@
                                     <p><span class="detail">Tel no: </span>022-20128221</p>
                                     <p><span class="detail">Timing: </span>10:00 am to 9:20pm</p>
                                     <p><span class="detail">Working Days: </span>All Days</p>
-                                    <h6><a href="#">View on Google Map</a></h6>
+                                    <h5><a href="#">View on Google Map</a></h5>
                                     <div class="icons-container">
-
+                                          <a href="#"><span class="fa fa-phone"></span></a>
+                                          <a href="#"><span class="fa fa-whatsapp"></span></a>
+                                          <a href="#"><span class="fa fa-envelope"></span></a>
                                     </div>
                                     <button class="btn btn-primary">Read More</button>
                               </div>
@@ -176,9 +188,11 @@
                                     <p><span class="detail">Tel no: </span>022-20128221</p>
                                     <p><span class="detail">Timing: </span>10:00 am to 9:20pm</p>
                                     <p><span class="detail">Working Days: </span>All Days</p>
-                                    <h6><a href="#">View on Google Map</a></h6>
+                                    <h5><a href="#">View on Google Map</a></h5>
                                     <div class="icons-container">
-
+                                          <a href="#"><span class="fa fa-phone"></span></a>
+                                          <a href="#"><span class="fa fa-whatsapp"></span></a>
+                                          <a href="#"><span class="fa fa-envelope"></span></a>
                                     </div>
                                     <button class="btn btn-primary">Read More</button>
                               </div>
@@ -201,9 +215,11 @@
                                     <p><span class="detail">Tel no: </span>022-20128221</p>
                                     <p><span class="detail">Timing: </span>10:00 am to 9:20pm</p>
                                     <p><span class="detail">Working Days: </span>All Days</p>
-                                    <h6><a href="#">View on Google Map</a></h6>
+                                    <h5><a href="#">View on Google Map</a></h5>
                                     <div class="icons-container">
-
+                                          <a href="#"><span class="fa fa-phone"></span></a>
+                                          <a href="#"><span class="fa fa-whatsapp"></span></a>
+                                          <a href="#"><span class="fa fa-envelope"></span></a>
                                     </div>
                                     <button class="btn btn-primary">Read More</button>
                               </div>
@@ -221,9 +237,11 @@
                                     <p><span class="detail">Tel no: </span>022-20128221</p>
                                     <p><span class="detail">Timing: </span>10:00 am to 9:20pm</p>
                                     <p><span class="detail">Working Days: </span>All Days</p>
-                                    <h6><a href="#">View on Google Map</a></h6>
+                                    <h5><a href="#">View on Google Map</a></h5>
                                     <div class="icons-container">
-
+                                          <a href="#"><span class="fa fa-phone"></span></a>
+                                          <a href="#"><span class="fa fa-whatsapp"></span></a>
+                                          <a href="#"><span class="fa fa-envelope"></span></a>
                                     </div>
                                     <button class="btn btn-primary">Read More</button>
                               </div>
